# regressions

./: .gitignore  Readme.md  pyproject.toml  setup.py
examples/: comparing_with_sklearn.py  linear_demo.py  logistic_demo.py
src/regressions/: __init__.py  linear_regression.py  logistic_regression.py
src/regressions.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_linear_regression.py  test_logistic_regression.py
